<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="leer"> </string>
    <string name="app_name">EgiGeoZone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="geofence">Geofence  name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="latitudeOpt">Latitude (optional)</string>
    <string name="longitudeOpt">Longitude (optional)</string>
    <string name="geofenceHint">Enter geofence name</string>
    <string name="latitudeHint">Enter latitude</string>
    <string name="longitudeHint">Enter longitude</string>
    <string name="alias">Alias (optional)</string>
    <string name="aliasHint">Alias name for zone</string>
    <string name="menu_item_clear_geofence">Clear fields</string>
    <string name="menu_item_get_location">Current location</string>
    <string name="menu_item_accuracy">Accuracy</string>
    <string name="radius">Radius</string>
    <string name="certName">Certificate (PKCS12)</string>
    <string name="certPasswd">Password</string>
    <string name="caCertName">CA certificates  (PEM)</string>
    <string name="urlEntered">URL zone entered</string>
    <string name="urlExited">URL zone exited</string>
    <string name="user">User</string>
    <string name="userPasswd">Password</string>
    <string name="radiusHint">Enter radius in meters</string>
    <string name="certNameHint">Enter private certificate(PKCS12)</string>
    <string name="certPasswdHint">Enter certificate password</string>
    <string name="caCertNameHint">Enter CA certificates</string>
    <string name="urlEnteredHint">Enter URL for entering zone</string>
    <string name="urlExitedHint">Enter URL for exiting zone</string>
    <string name="userHint">Enter user for basic authentication</string>
    <string name="userPasswdHint">Enter password for basic authentication</string>
    <string name="fhem_geofancyHint">"Enter URL for Fhem Geofancy modul"</string>
    <string name="trackingHint">"Enter URL for tracking"</string>
    <string name="timeoutHint">"Default is 30"</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_info">Info</string>
    <string name="menu_item_tech_info">Technical info</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_privacy">Privacy policy</string>
    <string name="menu_item_all_geozones">Show all Geozones</string>
    <string name="menu_item_profiles">Profiles</string>
    <string name="menu_item_settings">Settings</string>
    <string name="admin">Administration</string>
    <string name="menu_item_log">Show last log file</string>
    <string name="menu_item_send_log">Send last log file</string>
    <string name="menu_item_configuration">Configuration</string>
    <string name="menu_item_debug">Log level</string>
    <string name="menu_item_export">Export to:</string>
    <string name="menu_item_import">Import from:</string>
    <string name="menu_item_plugins">Show registered plugins</string>
    <string name="menu_item_track">Location tracking</string>
    <string name="export_ok_text">Configuration exported.</string>
    <string name="import_ok_text">Configuration registered.</string>
    <string name="settings_tracker">General location tracker settings</string>
    <string name="loc_interval">Time in minutes between location updates (polling)</string>
    <string name="profilName">Profile name</string>
    <string name="execFor">Execute at</string>
    <string name="enter">entering zone</string>
    <string name="exit">leaving zone</string>
    <string name="test_ok_text">The test was successful.</string>
    <string name="test_ok_text_more">The test was successful. Check the changed settings.</string>
    <string name="test_ok_title">Test OK</string>
    <string name="test_nok_title">Test failed</string>
    <string name="prio_low">Low power accuracy (about 10 km accuracy)</string>
    <string name="prio_balanced">Balanced power accuracy (about 100 meter accuracy)</string>
    <string name="prio_high">High power accuracy (finest location available)</string>
    <string name="app_debug">Log level</string>
    <string name="app_plugins">Registered plugins</string>
    <string name="fhem_geofancy">URL Fhem Geofancy</string>
    <string name="srv_tracking">URL for tracking</string>
    <string name="descCerts">Certificates must be stored under \'internal storage/egigeozone\'</string>
    <string name="descfhemGeofancy">Fhem/Geofancy-Style address. Example: https://rpi.server.de:1999/webhook/geo</string>
    <string name="descTracking">Tracking address. Example: http://server:port/xyz/track.php?latitude=${latitude}&amp;longitude=${longitude}&amp;date=${date}&amp;device=${androidId}&amp;zone=${zone}</string>
    <string name="descor1">or</string>
    <string name="geofence_not_available">Geofence service is not available. Turn on location access in settings and try again. Redirected to the Location Settings?</string>
    <string name="geofence_too_many_geofences">Your app has registered more than 100 geofences. Remove unused ones before adding new geofences.</string>
    <string name="info_title">Short description</string>
    <string name="info">EgiGeoZone is an Android Geofencing app, which uses several sensors on your phone or tablet to detect your location and then to trigger different actions when entering or leaving predefined zones that you can configure. It can trigger many actions directly, or simply display a notification on screen. In other words, the app works in a similar way to apps like Tasker, which allows certain events to initiate an action on your smartphone or even a remote server.</string>
    <string name="disclaimer_title">Disclaimer - End User License Agreement</string>
    <string name="disclaimer">THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nA few of the icons are made by Freepik from www.flaticon.com</string>
    <string name="privacy_short">The EgiGeoZone app does not collect any personal data from the users or do pass them to third parties. Also, the app does not generate any statistics</string>
    <string name="privacy_title">Description of the required Android permissions</string>
    <string name="privacy_contact_title">On the web</string>
    <string name="privacy_hp">The text on the website:\n <a href="https://www.egigeozone.de/privacy/default_en.html">https://www.egigeozone.de/privacy/default_en.html</a></string>
    <string name="privacy_mail">Contact:\n <a href="egmontr@gmail.com">egmontr@gmail.com</a></string>
    <string name="usage">Usage:</string>
    <string name="pt_1">Phone Calls:</string>
    <string name="put_1">This authorization allows the app to determine, among other things, the telephone number and device ID.</string>
    <string name="p_1">Used to determine the device ID. This is then sent to FHEM or other used servers to identify the user there.</string>
    <string name="pt_2">Your messages:</string>
    <string name="put_2">Sends SMS messages.</string>
    <string name="p_2">Allows the app to send SMS messages. Charges may apply.</string>
    <string name="pt_3">Your location:</string>
    <string name="put_3">Allows the app to get your location.</string>
    <string name="p_3">Determining the location and the entry / exit of a Geozone (basic functionality of the app)</string>
    <string name="pt_4">Storage:</string>
    <string name="put_4">Allows the app to read and write to the SD card.</string>
    <string name="p_4">Read the certificates. Read and write the export / import file. Write, read and delete various log files.</string>
    <string name="pt_5">Your accounts:</string>
    <string name="put_5">Gets accounts on the device.</string>
    <string name="p_5">Export and import the configuration to e.g. Dropbox, Google Drive, OneDrive, and more.</string>
    <string name="pt_6">Wifi connections:</string>
    <string name="put_6">Call Wifi connections.</string>
    <string name="p_6">Used to determine the location and used to start and stop Wifi.</string>
    <string name="put_7">Retrieve data from the Internet:</string>
    <string name="p_7">Various data are needed to display the map, search in the map, GCM, and so on.</string>
    <string name="put_8">Read Google service configuration:</string>
    <string name="p_8">For using Google services, such as Geofence service, GCM, and Google Maps.</string>
    <string name="put_10">Network connections:</string>
    <string name="p_10">To check if Internet is available again. Thus one can repeat buffered server requests.</string>
    <string name="put_11">Run at Startup:</string>
    <string name="p_11">When you start (boot), the zones are passed to the Google Geofence service, since they are not remembered.</string>
    <string name="put_12">Connect and disconnect Wifi connections:</string>
    <string name="put_13">Vibration alarm control:</string>
    <string name="p_13">Start and stop vibration at "More Actions".</string>
    <string name="put_14">Turn off the sleep state:</string>
    <string name="p_14">The device is only briefly awakened, so that actions can be started in the background.</string>
    <string name="rinfo_title">Description</string>
    <string name="rinfo">In the subject and body of mails, in body of the SMS and in the server URL you can use variables, which will be replaced on runtime.</string>
    <string name="rdesc_title">Variables</string>
    <string name="rdesc">GeoZone = ${zone}\nEnter/Exit = ${transition}\n1 for enter and 0 for exit = ${transitionType}\nLatitude = ${latitude}\nLongitude = ${longitude}
        \nReal latitude = ${realLatitude}\nReal longitude = ${realLongitude}\nAccuracy = ${accuracy}\nRadius = ${radius}\nDeviceId = ${deviceId}\nAndroidId = ${androidId}\n
        Date = ${date}\nLocal Date = ${localDate}\nUTC location date = ${locationDate}\nLocal location date = ${localLocationDate}\n
    </string>
    <string name="locationTracker">Location tracker</string>
    <string name="trackEnter">Track on enter zone</string>
    <string name="trackExit">Track on exit zone</string>
    <string name="localInterval">Interval in minutes to log location</string>
    <string name="hintlocalInterval">Default is 5 minutes</string>
    <string name="text_trackToFile">Write tracks to local file</string>
    <string name="text_trackToMail">Track to email profile</string>
    <string name="text_trackToServer">Track to server profile</string>
    <string name="hp">EgiGeoZone website:\n <a href="http://www.egigeozone.de">http://www.egigeozone.de</a></string>
    <string name="forum">EgiGeoZone forum:\n <a href="http://rpi.spdns.eu/egigeozone/">http://rpi.spdns.eu/egigeozone/</a></string>
    <string name="search">Search</string>
    <string name="satellite">Satellite</string>
    <string name="increaseRadius">Increase Radius</string>
    <string name="decreaseRadius">Decrease Radius</string>
    <string name="deleteProfile">Delete Profile</string>
    <string name="geoZones">Geofences</string>
</resources>