<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_marginEnd="10dip"
            android:src="@drawable/ic_launcher_green"
            android:clickable="true"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/privacy_short" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#c6cbd2">
            <TextView android:id="@+id/text2" android:text="@string/privacy_title" android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/pt_1" android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_1"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/usage"  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_1"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/pt_2" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_2"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/usage"  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_2"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/pt_3" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_3"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/usage"  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_3"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/pt_4" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_4"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/usage"  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_4"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/pt_5" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_5"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/usage"  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_5"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/pt_6" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_6"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/usage"  android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_6"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_7" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_7"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_8" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_8"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_10" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_10"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_11" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_11"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_12" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_13"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_13" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_13"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/put_14" android:textStyle="bold" android:layout_marginTop="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/p_14"/>

        <LinearLayout
            android:orientation="vertical"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#c6cbd2">
            <TextView android:id="@+id/text" android:text="@string/privacy_contact_title" android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/privacy_hp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="email"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/privacy_mail"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</ScrollView>
