<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map_all"
        android:orderInCategory="100"
        android:title="@string/menu_item_all_geozones"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profiles"
        android:orderInCategory="100"
        android:icon="@drawable/ic_profile_add_black_24dp"
        android:title="@string/menu_item_profiles"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_item_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        app:showAsAction="never"
        android:title="@string/menu_item_refresh"/>
    <item
        android:id="@+id/action_tech_info"
        android:orderInCategory="100"
        android:title="@string/menu_item_tech_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/menu_item_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/menu_item_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="100"
        android:title="@string/menu_item_privacy"
        app:showAsAction="never" />
</menu>
