<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
	<LinearLayout 
	    android:orientation="vertical"
	    android:baselineAligned="false"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
	    >
	
		<TextView android:paddingTop="10dp" android:id="@+id/text" android:text="@string/rinfo_title" android:layout_height="wrap_content" android:layout_width="match_parent" 
	    	android:textStyle="bold"/>
	
		<TextView android:paddingTop="10dp"
			android:text="@string/rinfo" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
	    
	    <TextView android:paddingTop="10dp"  android:id="@+id/text2" android:text="@string/rdesc_title" android:layout_height="wrap_content" android:layout_width="wrap_content" 
	    	android:textStyle="bold"/>
		
		<TextView android:paddingTop="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rdesc"/>
	
	</LinearLayout>
</ScrollView> 
